<resources>
    <string name="app_name">Fruit List</string>
    <string name="nome_fruta">Fruit name</string>
    <string name="desc_fruta">Fruit description</string>
    <string name="img_fruta">Select Image</string>
    <string name="cad_fruta">Fruit registration</string>
    <string name="cads_fruta">Register</string>
    <string name="apagar_fruta">Delete</string>
    <string name="lista_vazia">There are no registered fruits</string>
    <string name="remover_fruta_msg">Want to Remove Fruit</string>
    <string name="remover_fruta_alert">Remove Fruit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="atention">Attention</string>
    <string name="fruit_registered">There is a fruit with that name already registered.</string>
    <string name="ok">Ok</string>
    <string name="adicionar">Add</string>
    <string name="add_fruta">Add Fruit</string>
    <string name="msg_itens_obrigatorios">All items are mandatory to fill!</string>
</resources>