<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFruitActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/nameFruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="@string/nome_fruta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailFruitImageView" />

        <TextView
            android:id="@+id/descFruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_fruta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameFruit"
            app:layout_constraintVertical_bias="0.082" />

        <ImageView
            android:id="@+id/DetailFruitImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="84dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnApagarFruta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apagar_fruta"
            app:layout_constraintBottom_toTopOf="@+id/nameFruit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DetailFruitImageView"
            app:layout_constraintVertical_bias="0.568" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>